--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluraflixi</title>
 </head>
-<body>
-   <H1>Bem vindo ao maior catálogo de filmes da internet</H1>
+<body style="background-color:rebeccapurple;"> <!-- Cor de fundo básica -->
+   
+    <!-- Texto de apresentação -->
+    <H1>Bem vindo ao maior catálogo de filmes da internet</H1>
+    <p>
+        Aqui você encontra uma seleção dos melhores filmes de todos os tempos. Aproveite para conhecer e 
+        explorar os títulos que marcaram gerações, com suas histórias envolventes e atuações memoráveis.
+    </p>
+
+    <!-- Tabela de filmes -->
+     <table border="1" cellspacing="0" cellspading="10"
+     <tr>
+        <th>Filme </th>
+        <th>Imagem</th>
+     </tr>
+     <tr>
+        <td>Filme 1</td>
+        <td><img src=imagem1.jpg alt="Imagem do Filme 1" width="100"></td>
+     </tr>
+     <tr>
+        
+     </tr>
 </body>
 </html>
