--- a/index.html
+++ b/index.html
@@ -25,7 +25,36 @@
         <td><img src=imagem1.jpg alt="Imagem do Filme 1" width="100"></td>
      </tr>
      <tr>
-        
+        <td><Filme 2></td>
+        <td><img src=imagem.jpg alt="imagem do Filme 2" width="100"></td>
+     </tr>
+     <tr>
+        <td> Filme 3</td>
+        <td><img src=imagem.jpg alt="imagem do Filme 3" width="100"></td>
+     </tr>
+     <tr>
+        <td> Filme 4</td>
+        <td><img src=imagem.jpg alt="imagem do Filme 4" width="100"></td>
+     </tr>
+     <tr>
+        <td> Filme 5</td>
+        <td><img src=imagem.jpg alt="imagem do Filme 5" width="100"></td>
+     </tr>
+     <tr>
+       <td> Filme 6</td>
+        <td><img src=imagem.jpg alt="imagem do Filme 6" width="100"></td>
+     </tr>
+     <tr>
+        <td> Filme 7</td>
+        <td><img src=imagem.jpg alt="imagem do Filme 7" width="100"></td>
+     </tr>
+     <tr>
+        <td> Filme 8</td>
+        <td><img src=imagem.jpg alt="imagem do Filme 8" width="100"></td>
+     </tr>
+     <tr>
+        <td> Filme 9</td>
+        <td><img src=imagem.jpg altok></td>
      </tr>
 </body>
 </html>
