--- a/index.html
+++ b/index.html
@@ -54,7 +54,34 @@
      </tr>
      <tr>
         <td> Filme 9</td>
-        <td><img src=imagem.jpg altok></td>
+        <td><img src=imagem.jpg alt="imagem do Filme 9" width="100"></td>
+     </tr>
+     <tr>
+      <td> Filme 10</td>
+      <td><img src="imagem.jpg" alt="imagem do Filme 10" width="100"></td>
+     </tr>
+     <tr>
+      <td> Filme 11</td>
+      <td><img src=imagem.jpg alt="imagem do Filme 11" width="100"></td>
+     </tr>
+     <tr>
+      <td> Filme 12</td>
+      <td><img src=imagem.jpg alt="imagem do Filme 12" width="100"></td>
+     </tr>
+     <tr>
+     <td> Filme 13</td>
+     <td><img src=imagem.jpg alt="imagem do Filme 13" width="100"></td>
+     </tr>
+     <td> Filme 14</td>
+     <td><img src=imagem.jpg alt="imagem do Filme 14" width="100"></td>
+     </tr>
+     <tr>
+      <td> Filme 15 </td>
+      <td><img src=imagem.jpg alt="imagem do Filme 15" width="100"></td>
+     </tr>
+     <tr>
+      <td> Filme 16</td>
+      <td><img src=imagem.jpg alt="imagem do Filme 16" width="100"></td>
      </tr>
 </body>
 </html>
