--- a/index.html
+++ b/index.html
@@ -83,5 +83,11 @@
       <td> Filme 16</td>
       <td><img src=imagem.jpg alt="imagem do Filme 16" width="100"></td>
      </tr>
+   </table>
+   <!-- Rodapé -->
+    <footer style="margin-top: 20px;">
+      <p>Aluraflixi 2024 - Todos os direitos reservados.</p>
+    </footer>
+    
 </body>
 </html>
