--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <th>Imagem</th>
      </tr>
      <tr>
-        <td>Filme 1</td>
-        <td><img src=imagem1.jpg alt="Imagem do Filme 1" width="100"></td>
+        <td>Pearl</td>
+        <td><img src=Pearl.jpg alt="Imagem do Filme 1" width="100"></td>
      </tr>
      <tr>
         <td><Filme 2></td>
