--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <th>Imagem</th>
      </tr>
      <tr>
-        <td>Pearl</td>
+        <td> Pearl </td>
         <td><img src=Pearl.jpg alt="Imagem do Filme 1" width="100"></td>
      </tr>
      <tr>
-        <td><Filme 2></td>
-        <td><img src=imagem.jpg alt="imagem do Filme 2" width="100"></td>
+        <td> Hereditário </td>
+        <td><img src=hereditari.jpg alt="imagem do Filme 2" width="100"></td>
      </tr>
      <tr>
-        <td> Filme 3</td>
+        <td> Castelo Animado </td>
         <td><img src=imagem.jpg alt="imagem do Filme 3" width="100"></td>
      </tr>
      <tr>
-        <td> Filme 4</td>
+        <td> Túmulo dos Vagalumes </td>
         <td><img src=imagem.jpg alt="imagem do Filme 4" width="100"></td>
      </tr>
      <tr>
