--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
      </tr>
      <tr>
         <td> Hereditário </td>
-        <td><img src=hereditari.jpg alt="imagem do Filme 2" width="100"></td>
+        <td><img src=hereditario.jpg alt="imagem do Filme 2" width="100"></td>
      </tr>
      <tr>
         <td> Castelo Animado </td>
-        <td><img src=imagem.jpg alt="imagem do Filme 3" width="100"></td>
+        <td><img src=Castelo_animado.jpg alt="imagem do Filme 3" width="100"></td>
      </tr>
      <tr>
         <td> Túmulo dos Vagalumes </td>
-        <td><img src=imagem.jpg alt="imagem do Filme 4" width="100"></td>
+        <td><img src=Tumulo_dos_vagalumes.jpg alt="imagem do Filme 4" width="100"></td>
      </tr>
      <tr>
         <td> Filme 5</td>
